--- a/tasks.html
+++ b/tasks.html
@@ -76,9 +76,9 @@
         </style>
         <a href="choosing page.html"><button>Back</button></a>
           <h2>Now your gifts are ready. Complete those simple tasks to claim them</h2>
-          <p>1. Follow us to our faceboook page <a href="">FOLLOW HERE</a></p>
-          <p>2. Subscribe to our YouTube channel <a href="">SUBSCRIBE HERE</a></p>
-          <p>3. Watch this video for 3 minutes <a href="">WATCH VIDEO</a></p>
+          <p>1. Follow us to our faceboook page <a href="https://web.facebook.com/profile.php?id=61566249719323">FOLLOW HERE</a></p>
+          <p>2. Subscribe to our YouTube channel <a href="https://www.youtube.com/@How-To-g8w">SUBSCRIBE HERE</a></p>
+          <p>3. Watch this video for 3 minutes <a href="https://youtu.be/pU9ckkoblP0?si=EZDtLJB803D-31QR">WATCH VIDEO</a></p>
           <P>4. Share our website link in 10 facebook groups<a href="">SHARE WEBSITE</a></P>   
           <p>5. Share this website to 5 WhatsApp groups <a href="">SHARE WEBSITE</a></p>
           <b>After completing all tasks, Write your email then click the button to claim gift</b>
