--- a/tasks.html
+++ b/tasks.html
@@ -20,6 +20,7 @@
             color: blue;
         }
         button {
+            color: white;
             width: 200px;
             height: 40px;
             background-color: black;
